# FaithTracker_Church-Pastoral-Care-System

./: .env.example  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_SUMMARY.md  README.md  RELEASE_NOTES_v2.0.0.md  backend_test.py  backend_test_results.json  docker-compose.yml  docker-install.sh  install.sh  install_improved.sh  plan.md  summary.md  test_install.sh  update.sh
.claude/: settings.local.json
.emergent/: emergent.yml  emergent_todos.json  summary.txt
.github/workflows/: ci.yml
angie/: README.md  angie.conf  generate-config.sh  install.sh  setup-ssl.sh
angie/conf.d/: faithtracker.conf.example  faithtracker.conf.template  rate-limit.conf  security-headers.conf  ssl.conf
angie/snippets/: proxy-headers.conf  ssl-params.conf
backend/: .env  .testmondata  Dockerfile  TESTING_GUIDE.md  bulk_engagement_update.py  comprehensive_test.py  config.py  constants.py  create_indexes.py  dependencies.py  docker_secrets.py  enums.py  fix_care_event_ids.py  import_data.py  import_photos.py  init_db.py  migrate.py  models.py  normalize_user_phones.py  pdf_report.py  pyproject.toml  pytest.ini  recalculate_engagement.py  requirements.txt  scheduler.py  sentry_init.py  server.py  test_api.sh  utils.py
backend/routes/: __init__.py  accident_followup.py  auth.py  campus.py  care_events.py  dashboard.py  financial_aid.py  grief_support.py  members.py
backend/services/: __init__.py  cache.py  care_event_service.py  change_stream.py  db_compat.py  db_utils.py  http_client.py  image_service.py  member_service.py  notification_service.py  search.py
backend/tests/: conftest.py  test_api_sync.py  test_basic_functionality.py  test_financial_aid.py  test_integration_auth.py  test_integration_routes.py  test_integration_server.py  test_multi_tenancy.py  test_new_features.py  test_pastoral_notes.py  test_routes_coverage.py  test_scheduler.py  test_scheduler_comprehensive.py  test_scheduler_jobs.py  test_server_coverage.py  test_server_endpoints.py  test_server_gaps.py  test_services.py  test_utils.py
backups/: faithtracker_20251206_033027.archive
data/: .gitkeep
docs/: API_DOCUMENTATION.md  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_DEBIAN.md  FEATURES.md  INSTALLATION_TESTING.md  SECURITY.md  UPDATE_GUIDE.md
frontend/: Dockerfile  Dockerfile.base  Dockerfile.deps  Dockerfile.fast  eslint.config.js  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.js
frontend/public/: index.html  manifest.json  resize-observer-fix.js  robots.txt  sw.js
frontend/public/.well-known/: security.txt
frontend/src/: App.css  App.js  App.jsx  env.d.ts  i18n.js  index.css  index.js  main.jsx
frontend/src/components/: ConfirmDialog.js  ConfirmDialog.jsx  ConfirmDialog.tsx  DesktopSidebar.js  DesktopSidebar.jsx  EmptyState.jsx  EmptyState.tsx  EngagementBadge.jsx  EngagementBadge.tsx  ErrorBoundary.jsx  ErrorBoundary.tsx  ErrorState.jsx  ErrorState.tsx  EventTypeBadge.jsx  EventTypeBadge.tsx  FilterRuleBuilder.jsx  IntegrationTest.jsx  LanguageToggle.jsx  LanguageToggle.tsx  Layout.js  Layout.jsx  LazyImage.js  LazyImage.jsx  LazyImage.tsx  LinkWithPrefetch.jsx  LinkWithPrefetch.tsx  (+17 more)
mobile/: app.config.ts  package.json
mobile/app/: reports.tsx
mobile/components/: OfflineBanner.tsx  SyncStatusIndicator.tsx
mobile/constants/: api.ts  theme.ts
mobile/context/: ThemeContext.tsx
mobile/hooks/: useActivityStream.ts  useAnalytics.ts  useCareEvents.ts  useDashboard.ts  useOfflineSync.ts  useReducedMotion.ts  useReports.ts
mobile/lib/: accessibility.ts  formatting.ts  i18n.ts  mockData.ts  offlineQueue.ts  queryClient.ts  storage.ts
mobile/locales/: en.json  id.json
mobile/services/: api.ts  authRefresh.ts  notifications.ts
mobile/stores/: auth.ts
mobile/types/: index.ts
scripts/: backup-db.sh  build-frontend.sh  digest_heartbeat.sh  security-audit.sh  validate-deployment.sh
test_reports/: iteration_2.json  iteration_5.json  iteration_6.json
tests/: backend_test.py
(+144 files in other folders)
