[project]
name = "faithtracker-backend"
version = "1.0.0"
description = "FaithTracker — multi-tenant pastoral care management system (Litestar + MongoDB)"
requires-python = ">=3.12"
readme = "README.md"

# ============================================================================
# Production runtime dependencies. Source-of-truth for what ships in the
# Docker image. Update via `uv add <pkg>` / `uv remove <pkg>`. Lockfile
# (uv.lock) is auto-regenerated and must be committed.
# ============================================================================
dependencies = [
    # Web framework + ASGI server
    "litestar[standard]==2.21.1",
    "granian==2.7.2",
    "uvicorn==0.42.0",
    "msgspec==0.19.0",
    "watchfiles==1.1.1",
    "python-multipart==0.0.20",

    # MongoDB (async)
    "motor>=3.7.0",
    "pymongo>=4.10.0",

    # Auth + crypto
    "PyJWT==2.10.1",
    "bcrypt==4.1.3",
    "cryptography==46.0.6",
    "python-dotenv==1.2.1",

    # Cache (DragonflyDB)
    "redis[hiredis]==5.2.1",

    # Search
    "meilisearch==0.40.0",

    # Scheduling
    "APScheduler==3.11.1",

    # PDF generation
    "weasyprint==66.0",
    "pydyf==0.11.0",
    "pillow==12.0.0",

    # Date/time
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "tzdata==2025.2",
    "tzlocal==5.3.1",

    # HTTP / external
    "httpx==0.28.1",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "oauthlib==3.3.1",
    "urllib3==2.6.0",

    # Email / validation
    "email-validator==2.3.0",

    # Data libs (used by reports + bulk ops)
    "numpy==2.3.4",
    "pandas==2.3.3",

    # AWS / S3 (used by import scripts; kept in runtime image)
    "boto3==1.40.67",
    "s3transfer==0.14.0",

    # CLI helpers (used by maintenance scripts)
    "typer==0.20.0",
    "click==8.3.0",
    "rich==14.2.0",
    "jq==1.10.0",

    # Test deps that are imported by some maintenance scripts.
    # Kept in runtime so test_api.sh against a live container works.
    "pytest==8.4.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==6.0.0",
    "Faker==37.4.1",
]

# ============================================================================
# Dev-only dependencies. Installed via `uv sync --group dev`. NOT shipped
# in the production Docker image (Dockerfile uses --no-dev).
# ============================================================================
[dependency-groups]
dev = [
    "pytest-xdist>=3.5.0",        # parallel pytest (-n auto)
    "pytest-timeout>=2.4.0",      # per-test timeout (Round-1+ test infra)
    "pytest-testmon>=2.1.0",      # incremental: only run tests touched by code changes
    "mongomock>=4.3.0",           # in-memory MongoDB for unit tests (no Docker)
    "mongomock-motor>=0.0.34",    # async wrapper for mongomock
    "ruff==0.11.12",              # lint + format
    "pip-audit==2.7.3",           # security scanner
    "ipython==8.18.1",            # better REPL
    "mypy==1.13.0",               # type checker
    "types-python-dateutil==2.9.0.20241003",
]

# ============================================================================
# Tool config
# ============================================================================
[tool.uv]
# Use the same Indonesia mirror for fast resolves. uv reads UV_INDEX_URL
# from env in the Dockerfile too — this is the in-repo default for local
# `uv lock` / `uv sync` runs.
default-groups = []  # production install excludes dev by default

[tool.uv.sources]
# (No git/path sources — all packages from the index.)

[build-system]
# Minimal build backend — required by some tools even though we don't
# ship a wheel. setuptools is already pulled in by most Python toolchains.
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Don't try to auto-discover packages — backend is run as scripts, not
# imported as a package. Marking py_modules empty avoids "multiple top-
# level packages" errors during a build attempt.
py-modules = []
